--- a/firewall_zones/vyos_gateway/local/from-isp-transit-ipv4.yml
+++ b/firewall_zones/vyos_gateway/local/from-isp-transit-ipv4.yml
@@ -9,3 +9,9 @@
   protocol: icmp
   icmp:
     type_name: any
+- description: Allow OSPF from Neighbors
+  action: accept
+  protocol: 89
+  source:
+    group:
+      address_group: OSPF-NEIGHBOR-v4
