--- a/firewall_zones/vyos_gateway/local/from-transit-ipv4.yml
+++ b/firewall_zones/vyos_gateway/local/from-transit-ipv4.yml
@@ -17,3 +17,9 @@
   destination:
     group:
       port_group: DNS
+- description: Allow OSPF from Neighbors
+  action: accept
+  protocol: 89
+  source:
+    group:
+      address_group: OSPF-NEIGHBOR-v4
