--- a/firewall_zones/vyos_wan/isp-transit/from-local-ipv4.yml
+++ b/firewall_zones/vyos_wan/isp-transit/from-local-ipv4.yml
@@ -4,7 +4,6 @@
   protocol: icmp
   icmp:
     type_name: any
-- description: Allow all traffic
+- description: Allow OSPF
   action: accept
-  state:
-    new: true
+  protocol: 89
