--- a/firewall_zones/vyos_work/transit/from-local-ipv4.yml
+++ b/firewall_zones/vyos_work/transit/from-local-ipv4.yml
@@ -15,3 +15,6 @@
   destination:
     address: "10.9.0.{{ vyos__peer_host_id_ipv4 }}"
     port: 3780
+- description: Allow OSPF
+  action: accept
+  protocol: 89
