--- a/group_vars/vyos_wan.yml
+++ b/group_vars/vyos_wan.yml
@@ -33,6 +33,13 @@ vyos_firewall__zones:
 vyos_firewall__zones_path: "./firewall_zones/vyos_wan"
 
 vyos_firewall_global__group:
+  address_group:
+    - name: OSPF-NEIGHBOR-v4
+      description: IP Addresses of our OSPF Neighbors ({{ ansible_managed }})
+      afi: ipv4
+      members:
+        - address: 10.3.0.76
+        - address: 10.3.0.77
   network_group:
     - name: "RFC1918-v4"
       description: "IPv4 Private Address Space ({{ ansible_managed }})"
@@ -74,6 +81,25 @@ vyos_interfaces__pppoe:
     mss: 1452
     mtu: 1492
     source_interface: eth0
+
+vyos_ospf_interfaces__config:
+  - name: eth1 vif 3
+    address_family:
+    - afi: ipv4
+      authentication:
+        md5_key:
+          key_id: 1
+          key: "{{ vyos__ospf_authentication_key }}"
+      cost: 1 # 10G
+      dead_interval: 5
+      hello_interval: 2
+      network: non-broadcast
+
+vyos_ospfv2__neighbors:
+  - neighbor_id: 10.3.0.76
+    priority: "{{ hostvars['gateway01.routers.hogs.tswn.us'].vyos__vrrp_priority }}"
+  - neighbor_id: 10.3.0.77
+    priority: "{{ hostvars['gateway02.routers.hogs.tswn.us'].vyos__vrrp_priority }}"
 
 # This uses a local DNS forwarding server, so use that.
 vyos_system__name_servers:
