--- a/group_vars/vyos_work.yml
+++ b/group_vars/vyos_work.yml
@@ -26,6 +26,12 @@ vyos_firewall__zones_path: "./firewall_zones/vyos_work"
 
 vyos_firewall_global__group:
   address_group:
+    - name: OSPF-NEIGHBOR-v4
+      description: IP Addresses of our OSPF Neighbors ({{ ansible_managed }})
+      afi: ipv4
+      members:
+        - address: 10.2.0.76
+        - address: 10.2.0.77
     - name: PEER-v4
       description: IP Addresses of our Peer Router ({{ ansible_managed }})
       afi: ipv4
@@ -71,6 +77,25 @@ vyos_interfaces__ethernet:
         description: "WORK - Work device traffic ({{ ansible_managed }})"
         ipv4:
           - address: "192.168.1.{{ vyos__host_id_ipv4 }}/24"
+
+vyos_ospf_interfaces__config:
+  - name: eth0
+    address_family:
+    - afi: ipv4
+      authentication:
+        md5_key:
+          key_id: 1
+          key: "{{ vyos__ospf_authentication_key }}"
+      cost: "{% if vyos__host_id_ipv4 < vyos__peer_host_id_ipv4 %}10{% else %}100{% endif %}"
+      dead_interval: 5
+      hello_interval: 2
+      network: non-broadcast
+
+vyos_ospfv2__neighbors:
+  - neighbor_id: 10.2.0.76
+    priority: "{{ hostvars['gateway01.routers.hogs.tswn.us'].vyos__vrrp_priority }}"
+  - neighbor_id: 10.2.0.77
+    priority: "{{ hostvars['gateway02.routers.hogs.tswn.us'].vyos__vrrp_priority }}"
 
 vyos_system__name_servers:
   - "10.2.0.75"
