--- a/roles/ansible-cron/tasks/main.yml
+++ b/roles/ansible-cron/tasks/main.yml
@@ -4,12 +4,13 @@
     that: "ansible_cron__inventory_file == 'prod-inventory' or ansible_cron__inventory_file == 'testing-inventory'"
     fail_msg: "Please set ansible_cron__inventory_file to the correct inventory file in host_vars/{{ inventory_hostname }}.yml"
 
-- name: "Ensure ansible & ara dependencies are installed"
+- name: Install dependencies
   ansible.builtin.apt:
     name:
-      - "software-properties-common"
-      - "python3-pip"
-    state: "latest"
+      - cron
+      - python3-pip
+      - software-properties-common
+    state: present
   when: ansible_distribution == "Ubuntu"
 - name: "Install Ansible PPA Repository"
   ansible.builtin.apt_repository:
