--- a/group_vars/vyos_wan.yml
+++ b/group_vars/vyos_wan.yml
@@ -38,8 +38,8 @@ vyos_firewall_global__group:
       description: IP Addresses of our OSPF Neighbors ({{ ansible_managed }})
       afi: ipv4
       members:
-        - address: 10.3.0.76
-        - address: 10.3.0.77
+        - address: 10.2.0.85
+        - address: 10.2.0.86
   network_group:
     - name: "RFC1918-v4"
       description: "IPv4 Private Address Space ({{ ansible_managed }})"
@@ -64,10 +64,10 @@ vyos_interfaces__ethernet:
   - name: eth1
     description: "Trunk ({{ ansible_managed }})"
     vifs:
-      - vlan_id: 3
-        description: "ISP-TRANSIT - router-to-router traffic ({{ ansible_managed }})"
+      - vlan_id: 2
+        description: "TRANSIT - router-to-router traffic ({{ ansible_managed }})"
         ipv4:
-          - address: "10.3.0.{{ vyos__host_id_ipv4 }}/24"
+          - address: "10.2.0.{{ vyos__host_id_ipv4 }}/24"
       - vlan_id: 10
         description: "MAN - management vlan ({{ ansible_managed }})"
         ipv4:
@@ -83,7 +83,7 @@ vyos_interfaces__pppoe:
     source_interface: eth0
 
 vyos_ospf_interfaces__config:
-  - name: eth1 vif 3
+  - name: eth1 vif 2
     address_family:
     - afi: ipv4
       authentication:
@@ -94,6 +94,12 @@ vyos_ospf_interfaces__config:
       dead_interval: 5
       hello_interval: 2
       network: non-broadcast
+
+vyos_ospfv2__neighbors:
+  - neighbor_id: "10.2.0.85"
+    priority: "{{ hostvars['work01.routers.hogs.tswn.us'].vyos__vrrp_priority }}"
+  - neighbor_id: "10.2.0.86"
+    priority: "{{ hostvars['work02.routers.hogs.tswn.us'].vyos__vrrp_priority }}"
 
 # This uses a local DNS forwarding server, so use that.
 vyos_system__name_servers:
