--- a/group_vars/vyos_home.yml
+++ b/group_vars/vyos_home.yml
@@ -67,6 +67,110 @@ vyos_dns_forwarding__listen_addresses:
   - 10.150.0.1
   - "10.117.0.{{ vyos__host_id_ipv4 }}"
 
+vyos_dhcp_server__failover_name: maccabeus-HA
+vyos_dhcp_server__networks:
+  - name: "UNIFI-MAN"
+    default_router: "10.1.0.1"
+    own_dns: true
+    range:
+      start: "10.1.0.150"
+      stop: "10.1.0.250"
+    subnet: "10.1.0.0/24"
+    static_mapping:
+      - name: "usw-pro-48"
+        ip: "10.1.0.11"
+        mac: "74:83:c2:4a:ff:e6"
+      - name: "flex-porch"
+        ip: "10.1.0.30"
+        mac: "74:83:c2:49:e6:2c"
+      - name: "flex-office-sdwilsh"
+        ip: "10.1.0.31"
+        mac: "74:83:c2:49:e6:4d"
+      - name: "flex-mini-office"
+        ip: "10.1.0.32"
+        mac: "74:83:c2:ff:8f:eb"
+      - name: "den-ap"
+        ip: "10.1.0.50"
+        mac: "78:8a:20:0f:45:b0"
+      - name: "living-ap"
+        ip: "10.1.0.51"
+        mac: "78:8a:20:ff:1c:0c"
+      - name: "kitchen-ap"
+        ip: "10.1.0.52"
+        mac: "78:8a:20:0f:e4:84"
+      - name: "upper-hallway-ap"
+        ip: "10.1.0.53"
+        mac: "fc:ec:da:79:81:6c"
+  - name: "MAN"
+    default_router: "10.10.0.1"
+    own_dns: true
+    range:
+      start: "10.10.0.200"
+      stop: "10.10.0.250"
+    subnet: "10.10.0.0/24"
+    static_mapping:
+      - name: "sdwilsh-desk-switch"
+        ip: "10.10.0.16"
+        mac: "2c:c8:1b:9c:21:29"
+  - name: "GWORK"
+    default_router: "192.168.1.1"
+    own_dns: false
+    range:
+      start: "192.168.1.100"
+      stop: "192.168.1.250"
+    subnet: "192.168.1.0/24"
+  - name: "IOT"
+    default_router: "10.66.0.1"
+    own_dns: true
+    range:
+      start: "10.66.0.10"
+      stop: "10.66.0.250"
+    subnet: "10.66.0.0/24"
+  - name: "NOWAN"
+    default_router: "10.67.0.1"
+    own_dns: true
+    range:
+      start: "10.67.0.10"
+      stop: "10.67.0.250"
+    subnet: "10.67.0.0/24"
+  - name: "HOME"
+    default_router: "10.117.0.1"
+    own_dns: true
+    range:
+      start: "10.117.1.1"
+      stop: "10.117.1.254"
+    static_mapping:
+      - name: "office-printer"
+        ip: "10.117.0.14"
+        mac: "f8:0d:60:ca:32:bf"
+      - name: "lutron"
+        ip: "10.117.0.18"
+        mac: "50:8c:b1:1d:4d:1f"
+      - name: "roku-master"
+        ip: "10.117.0.20"
+        mac: "d8:31:34:5f:6c:35"
+      - name: "roku-den"
+        ip: "10.117.0.21"
+        mac: "d8:31:34:66:95:f1"
+      - name: "hue"
+        ip: "10.117.0.34"
+        mac: "ec:b5:fa:9b:c1:f6"
+    subnet: "10.117.0.0/23"
+  - name: "GUEST"
+    default_router: "10.131.0.1"
+    own_dns: false
+    range:
+      start: "10.131.0.100"
+      stop: "10.131.0.250"
+    subnet: "10.131.0.0/24"
+  - name: "CULTIVAR"
+    default_router: "10.150.0.1"
+    own_dns: true
+    range:
+      start: "10.150.0.100"
+      stop: "10.150.0.250"
+    subnet: "10.150.0.0/24"
+
 vyos_firewall__zones:
   - name: "UNIFI-MAN"
     description: "unifi management vlan ({{ ansible_managed }})"
