--- a/vyos.yml
+++ b/vyos.yml
@@ -138,6 +138,14 @@
         - services
         - ssh
 
+    - name: Setup DHCP Servers
+      ansible.builtin.import_role:
+        name: vyos-dhcp-server
+      tags:
+        - dhcp-server
+        - services
+      when: vyos_dhcp_server__networks | length > 0
+
     - name: Setup DNS Forwarding
       ansible.builtin.import_role:
         name: vyos-dns-forwarding
@@ -270,176 +278,6 @@
     #
     # Services
     #
-    - ansible.builtin.set_fact:
-        dhcp_servers:
-          - name: "UNIFI-MAN"
-            default_router: "10.1.0.1"
-            own_dns: true
-            range:
-              start: "10.1.0.150"
-              stop: "10.1.0.250"
-            subnet: "10.1.0.0/24"
-            static_mapping:
-              - name: "usw-pro-48"
-                ip: "10.1.0.11"
-                mac: "74:83:c2:4a:ff:e6"
-              - name: "flex-porch"
-                ip: "10.1.0.30"
-                mac: "74:83:c2:49:e6:2c"
-              - name: "flex-office-sdwilsh"
-                ip: "10.1.0.31"
-                mac: "74:83:c2:49:e6:4d"
-              - name: "flex-mini-office"
-                ip: "10.1.0.32"
-                mac: "74:83:c2:ff:8f:eb"
-              - name: "den-ap"
-                ip: "10.1.0.50"
-                mac: "78:8a:20:0f:45:b0"
-              - name: "living-ap"
-                ip: "10.1.0.51"
-                mac: "78:8a:20:ff:1c:0c"
-              - name: "kitchen-ap"
-                ip: "10.1.0.52"
-                mac: "78:8a:20:0f:e4:84"
-              - name: "upper-hallway-ap"
-                ip: "10.1.0.53"
-                mac: "fc:ec:da:79:81:6c"
-          - name: "MAN"
-            default_router: "10.10.0.1"
-            own_dns: true
-            range:
-              start: "10.10.0.200"
-              stop: "10.10.0.250"
-            subnet: "10.10.0.0/24"
-            static_mapping:
-              - name: "sdwilsh-desk-switch"
-                ip: "10.10.0.16"
-                mac: "2c:c8:1b:9c:21:29"
-          - name: "GWORK"
-            default_router: "192.168.1.1"
-            own_dns: false
-            range:
-              start: "192.168.1.100"
-              stop: "192.168.1.250"
-            subnet: "192.168.1.0/24"
-          - name: "IOT"
-            default_router: "10.66.0.1"
-            own_dns: true
-            range:
-              start: "10.66.0.10"
-              stop: "10.66.0.250"
-            subnet: "10.66.0.0/24"
-          - name: "NOWAN"
-            default_router: "10.67.0.1"
-            own_dns: true
-            range:
-              start: "10.67.0.10"
-              stop: "10.67.0.250"
-            subnet: "10.67.0.0/24"
-          - name: "HOME"
-            default_router: "10.117.0.1"
-            own_dns: true
-            range:
-              start: "10.117.1.1"
-              stop: "10.117.1.254"
-            static_mapping:
-              - name: "office-printer"
-                ip: "10.117.0.14"
-                mac: "f8:0d:60:ca:32:bf"
-              - name: "lutron"
-                ip: "10.117.0.18"
-                mac: "50:8c:b1:1d:4d:1f"
-              - name: "roku-master"
-                ip: "10.117.0.20"
-                mac: "d8:31:34:5f:6c:35"
-              - name: "roku-den"
-                ip: "10.117.0.21"
-                mac: "d8:31:34:66:95:f1"
-              - name: "hue"
-                ip: "10.117.0.34"
-                mac: "ec:b5:fa:9b:c1:f6"
-            subnet: "10.117.0.0/23"
-          - name: "GUEST"
-            default_router: "10.131.0.1"
-            own_dns: false
-            range:
-              start: "10.131.0.100"
-              stop: "10.131.0.250"
-            subnet: "10.131.0.0/24"
-          - name: "CULTIVAR"
-            default_router: "10.150.0.1"
-            own_dns: true
-            range:
-              start: "10.150.0.100"
-              stop: "10.150.0.250"
-            subnet: "10.150.0.0/24"
-      tags:
-        - always
-    - name: "Setup DHCP"
-      vyos.vyos.vyos_config:
-        lines:
-          - "set service dhcp-server failover source-address 10.9.0.{{ vyos__host_id_ipv4 }}"
-          - "set service dhcp-server failover remote 10.9.0.{{ vyos__peer_host_id_ipv4 }}"
-          - "set service dhcp-server failover name maccabeus-HA"
-          - "set service dhcp-server failover status {% if vyos__vrrp_priority < 100 %}secondary{% else %}primary{% endif %}"
-      tags:
-        - services
-        - dhcp-server
-    - name: "Setup DHCP Subnets"
-      vyos.vyos.vyos_config:
-        lines:
-          - "set service dhcp-server shared-network-name {{ item.name }} authoritative"
-          - "set service dhcp-server shared-network-name {{ item.name }} subnet {{ item.subnet }} default-router {{ item.default_router }}"
-          - "set service dhcp-server shared-network-name {{ item.name }} subnet {{ item.subnet }} range 0 start {{ item.range.start }}"
-          - "set service dhcp-server shared-network-name {{ item.name }} subnet {{ item.subnet }} range 0 stop {{ item.range.stop }}"
-      loop: "{{ dhcp_servers }}"
-      loop_control:
-        label: "{{ item.name }} ({{ item.subnet }})"
-      tags:
-        - services
-        - dhcp-server
-    - name: "Setup DHCP DNS Servers"
-      vyos.vyos.vyos_config:
-        lines:
-          - >-
-            set service dhcp-server shared-network-name {{ item.name }} subnet {{ item.subnet }} name-server
-            {{ item.default_router[:-1] }}1
-          - >-
-            set service dhcp-server shared-network-name {{ item.name }} subnet {{ item.subnet }} name-server
-            {{ item.default_router[:-1] }}{{ vyos__host_id_ipv4 }}
-          - >-
-            set service dhcp-server shared-network-name {{ item.name }} subnet {{ item.subnet }} name-server
-            {{ item.default_router[:-1] }}{{ vyos__peer_host_id_ipv4 }}
-      loop: "{{ dhcp_servers }}"
-      loop_control:
-        label: "{{ item.name }} ({{ item.subnet }})"
-      when: "item.own_dns"
-      tags:
-        - services
-        - dhcp-server
-    - name: "Setup DHCP DNS Servers"
-      vyos.vyos.vyos_config:
-        lines:
-          - "set service dhcp-server shared-network-name {{ item.name }} subnet {{ item.subnet }} name-server 1.1.1.2"
-          - "set service dhcp-server shared-network-name {{ item.name }} subnet {{ item.subnet }} name-server 1.0.0.2"
-      loop: "{{ dhcp_servers }}"
-      loop_control:
-        label: "{{ item.name }} ({{ item.subnet }})"
-      when: "not item.own_dns"
-      tags:
-        - services
-        - dhcp-server
-    - name: "Setup DHCP Static Assignments"
-      vyos.vyos.vyos_config:
-        lines:
-          - "set service dhcp-server shared-network-name {{ item.0.name }} subnet {{ item.0.subnet }} static-mapping {{ item.1.name }} mac-address {{ item.1.mac }}"
-          - "set service dhcp-server shared-network-name {{ item.0.name }} subnet {{ item.0.subnet }} static-mapping {{ item.1.name }} ip-address {{ item.1.ip }}"
-      loop: "{{ dhcp_servers | subelements('static_mapping', skip_missing=true) }}"
-      loop_control:
-        label: "{{ item.0.name }}: {{ item.1.name }} ({{ item.1.ip }})"
-      tags:
-        - services
-        - dhcp-server
     - name: "Setup UBNT DHCP global-parameters"
       vyos.vyos.vyos_config:
         lines:
