--- a/vyos.yml
+++ b/vyos.yml
@@ -85,6 +85,17 @@
         - firewall
 
     #
+    # Static Routes
+    #
+    - name: Setup static routes
+      vyos.vyos.vyos_static_routes:
+        config: "{{ vyos_static_routes__config }}"
+        state: merged
+      when: vyos_static_routes__config | length > 0
+      tags:
+        - routing
+
+    #
     # OSPF
     #
     - name: "Setup OSPF for IPv4"
@@ -384,22 +395,6 @@
       tags:
         - routing
 
-    - name: Setup Outbound OSPF Redistribution
-      vyos.vyos.vyos_config:
-        lines:
-          - set policy access-list 150 description 'Outbound OSPF Redistribution'
-          - set policy access-list 150 rule 10 action 'permit'
-          - set policy access-list 150 rule 10 destination any
-          - set policy access-list 150 rule 10 source inverse-mask '0.0.0.255'
-          - set policy access-list 150 rule 10 source network '10.3.0.0'
-          - set policy access-list 150 rule 1000 action 'deny'
-          - set policy access-list 150 rule 1000 destination any
-          - set policy access-list 150 rule 1000 source any
-          - set protocols ospf access-list 150 export 'connected'
-        save: yes
-      tags:
-        - ospf
-
     - name: Setup NAT masquerade rules
       vyos.vyos.vyos_config:
         lines:
@@ -414,38 +409,5 @@
         index_var: rule_number
       tags:
         - nat
-#
-# vyos_work
-#
 
-- hosts: vyos_work
-  gather_facts: false
-  tasks:
-    - name: Gather config
-      vyos.vyos.vyos_facts:
-        gather_subset: config
-      tags:
-        - always
 
-    - name: Setup default route
-      vyos.vyos.vyos_config:
-        lines:
-          - "set protocols static route 0.0.0.0/0 next-hop 10.2.0.70"
-      tags:
-        - routing
-
-    - name: Setup Outbound OSPF Redistribution
-      vyos.vyos.vyos_config:
-        lines:
-          - set policy access-list 150 description 'Outbound OSPF Redistribution'
-          - set policy access-list 150 rule 10 action 'permit'
-          - set policy access-list 150 rule 10 destination any
-          - set policy access-list 150 rule 10 source inverse-mask '0.0.0.255'
-          - set policy access-list 150 rule 10 source network '192.168.1.0'
-          - set policy access-list 150 rule 1000 action 'deny'
-          - set policy access-list 150 rule 1000 destination any
-          - set policy access-list 150 rule 1000 source any
-          - set protocols ospf access-list 150 export 'connected'
-        save: yes
-      tags:
-        - ospf
