--- a/group_vars/vyos_work.yml
+++ b/group_vars/vyos_work.yml
@@ -36,11 +36,6 @@ vyos_firewall__zones_path: "./firewall_zones/vyos_work"
 
 vyos_firewall_global__group:
   address_group:
-    - name: OSPF-NEIGHBOR-v4
-      description: IP Addresses of our OSPF Neighbors ({{ ansible_managed }})
-      afi: ipv4
-      members:
-        - address: 10.2.0.70
     - name: PEER-v4
       description: IP Addresses of our Peer Router ({{ ansible_managed }})
       afi: ipv4
@@ -87,22 +82,13 @@ vyos_interfaces__ethernet:
         ipv4:
           - address: "192.168.1.{{ vyos__host_id_ipv4 }}/24"
 
-vyos_ospf_interfaces__config:
-  - name: eth0
-    address_family:
+vyos_static_routes__config:
+  - address_families:
     - afi: ipv4
-      authentication:
-        md5_key:
-          key_id: 1
-          key: "{{ vyos__ospf_authentication_key }}"
-      cost: 3
-      priority: "{% if vyos__host_id_ipv4 < vyos__peer_host_id_ipv4 %}10{% else %}1{% endif %}"
-      dead_interval: 5
-      hello_interval: 2
-      network: non-broadcast
-
-vyos_ospfv2__neighbors:
-  - neighbor_id: "10.2.0.70"
+      routes:
+        - dest: 0.0.0.0/0
+          next_hops:
+            - forward_router_address: 10.2.0.70
 
 vyos_system__name_servers:
   - "10.10.0.3"
