--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -77,6 +77,8 @@ bind_zones:
         ip: "10.117.0.19"
         aliases:
           - "homeassistant.hogs"
+      - name: "luxor.hogs"
+        ip: "10.117.0.22"
       - name: "loki.hogs"
         ip: "10.117.0.23"
         aliases:
