--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -168,6 +168,12 @@ bind_zones:
         ip: "10.10.0.55"
       - name: "centurylink.routers.hogs"
         ip: "10.10.0.70"
+      - name: "guest.routers.hogs"
+        ip: "10.10.0.81"
+      - name: "guest01.routers.hogs"
+        ip: "10.10.0.82"
+      - name: "guest02.routers.hogs"
+        ip: "10.10.0.83"
       - name: "work.routers.hogs"
         ip: "10.10.0.84"
       - name: "work01.routers.hogs"
