--- a/group_vars/vyos_wan.yml
+++ b/group_vars/vyos_wan.yml
@@ -80,6 +80,12 @@ vyos_static_routes__config:
   - address_families:
     - afi: ipv4
       routes:
+        - dest: 10.131.0.0/24
+          next_hops:
+            - forward_router_address: 10.2.0.81
+        - dest: 10.150.0.0/24
+          next_hops:
+            - forward_router_address: 10.2.0.81
         - dest: 192.168.1.0/24
           next_hops:
             - forward_router_address: 10.2.0.84
