update apt packages across all hosts asynchronously

--- a/plays/update.yml
+++ b/plays/update.yml
@@ -9,7 +9,9 @@
         name: "*"
         state: "latest"
         update_cache: yes
+      async: 300 # Five minutes
       become: yes
+      poll: 5
       when: ansible_distribution == "Ubuntu"
     - name: "Determine if a reboot is required"
       ansible.builtin.stat:
