move docker backend to new docker server

--- a/plays/hosts/docker.hogs.tswn.us.yml
+++ b/plays/hosts/docker.hogs.tswn.us.yml
@@ -2,6 +2,10 @@
 - hosts: docker.hogs.tswn.us
   become: yes
   roles:
+    - role: docker-zabbix-backend
+      tags:
+        - docker
+        - zabbix
     - role: docker-zabbix-frontend
       tags:
         - docker
