--- a/host_vars/docker.hogs.tswn.us.yml
+++ b/host_vars/docker.hogs.tswn.us.yml
@@ -4,6 +4,10 @@ common__additional_ethernet_interfaces:
     inet:
       mode: manual
       lines: []
+  - name: ens224.10
+    inet:
+      mode: manual
+      lines: []
   - name: ens224.117
     inet:
       mode: manual
