--- a/site.yml
+++ b/site.yml
@@ -39,6 +39,7 @@
 - import_playbook: plays/hosts/docker.hogs.tswn.us.yml
 - import_playbook: "plays/hosts/docker-ssd.hogs.tswn.us.yml"
 - import_playbook: "plays/hosts/harvest.hogs.tswn.us.yml"
+- import_playbook: plays/hosts/lighterthansome.hogs.tswn.us.yml
 - import_playbook: "plays/hosts/loki.hogs.tswn.us.yml"
 - import_playbook: "plays/hosts/monitor.house.gem.hogs.tswn.us.yml"
 - import_playbook: "plays/hosts/mysql.hogs.tswn.us.yml"
