allow ssh for sftp to the file server

--- a/firewall_zones/vyos_home/home/from-man-ipv4.yml
+++ b/firewall_zones/vyos_home/home/from-man-ipv4.yml
@@ -62,3 +62,12 @@
   source:
     group:
       address_group: "HASS-CIFS-from-MAN-v4"
+- description: Allow Connections to File Server SSH
+  action: accept
+  destination:
+    group:
+      address_group: "FILE-SERVER-v4"
+    port: 22
+  protocol: tcp
+  state:
+    new: true
