--- a/plays/hosts/docker.hogs.tswn.us.yml
+++ b/plays/hosts/docker.hogs.tswn.us.yml
@@ -2,6 +2,10 @@
 - hosts: docker.hogs.tswn.us
   become: yes
   roles:
+    - role: docker-esphome
+      tags:
+        - docker
+        - esphome
     - role: docker-unifi-controller
       tags:
         - docker
