add initial work for cloud routers

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -166,6 +166,12 @@ bind_zones:
         ip: "10.10.0.56"
       - name: "centurylink.routers.hogs"
         ip: "10.10.0.70"
+      - name: "cloud.routers.hogs"
+        ip: "10.10.0.78"
+      - name: "cloud01.routers.hogs"
+        ip: "10.10.0.79"
+      - name: "cloud02.routers.hogs"
+        ip: "10.10.0.80"
       - name: "guest.routers.hogs"
         ip: "10.10.0.81"
       - name: "guest01.routers.hogs"
