--- a/roles/docker-networks/tasks/main.yml
+++ b/roles/docker-networks/tasks/main.yml
@@ -50,8 +50,8 @@
     enable_ipv6: no
     ipam_driver: "default"
     ipam_config:
-      - subnet: "10.82.0.0/23"
-        gateway: "10.82.0.1"
+      - subnet: 10.82.0.0/24
+        gateway: 10.82.0.1
     name: "service82"
     state: "present"
   vars:
